--- a/Web.config
+++ b/Web.config
@@ -1,30 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="1.0.0.0" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebsiteTitle" value="Payment World" />
+    <add key="webpages:Version" value="1.0.0.0"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="WebsiteTitle" value="Payment World"/>
     <!-- Development Configuration -->
-    <add key="OnlineResourceCenterUrl" value="https://portal.paymentworld.com" />
-    <add key="OnlineResourceCenterUrlForgot" value="http://localhost/merchants2/forgotpassword.aspx" />
-    <add key="OnlineResourceCenterUrlRegister" value="http://localhost/merchants2/register.aspx" />
-    <add key="VirtualTerminalUrl" value="https://portal.paymentworld.com/vt" />
-    <add key="OnlineMerchantApplicationUrl" value="http://www.nationalmerchant.com/apply" />
-    <add key="SmtpServer" value="smtpout.secureserver.net" />
-    <add key="SmtpPort" value="80" />
-    <add key="SmtpUsername" value="system@llmerchantsolutions.com" />
-    <add key="SmtpPassword" value="system" />
-    <add key="InquiryEMailSubject" value="Payment World Inquiry" />
-    <add key="InquiryEMailFrom" value="clientservices@nationalmerchant.com" />
-    <add key="InquiryEMailCc" value="eespinosa@nationalmerchant.com" />
+    <add key="OnlineResourceCenterUrl" value="https://portal.paymentworld.com"/>
+    <add key="OnlineResourceCenterUrlForgot" value="http://localhost/merchants2/forgotpassword.aspx"/>
+    <add key="OnlineResourceCenterUrlRegister" value="http://localhost/merchants2/register.aspx"/>
+    <add key="VirtualTerminalUrl" value="https://portal.paymentworld.com/vt"/>
+    <add key="OnlineMerchantApplicationUrl" value="http://www.nationalmerchant.com/apply"/>
+    <add key="SmtpServer" value="smtpout.secureserver.net"/>
+    <add key="SmtpPort" value="80"/>
+    <add key="SmtpUsername" value="system@llmerchantsolutions.com"/>
+    <add key="SmtpPassword" value="system"/>
+    <add key="InquiryEMailSubject" value="Payment World Inquiry"/>
+    <add key="InquiryEMailFrom" value="clientservices@nationalmerchant.com"/>
+    <add key="InquiryEMailCc" value="eespinosa@nationalmerchant.com"/>
     <!-- Production Configuration 
     <add key="OnlineResourceCenterUrl" value="https://web1.nmconline.com/default.aspx" />
     <add key="OnlineResourceCenterUrlForgot" value="https://web1.nmconline.com/forgotpassword.aspx" />
@@ -38,57 +38,68 @@
     -->
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.0">
+    <compilation targetFramework="4.0" debug="true">
       <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="~/Account/LogOn" timeout="2880"/>
     </authentication>
     <membership>
       <providers>
-        <clear />
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <clear/>
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
       </providers>
     </membership>
     <profile>
       <providers>
-        <clear />
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
+        <clear/>
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
       </providers>
     </profile>
     <roleManager enabled="false">
       <providers>
-        <clear />
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+        <clear/>
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
       </providers>
     </roleManager>
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
+        <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
+    <!--<rewrite>
+      <rules>
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
